@@ -1,4 +1,6 @@
-from typing import TYPE_CHECKING, Any, Dict, Iterator
+import abc
+import inspect
+from typing import TYPE_CHECKING, Any, Dict, Iterator, Optional
 
 from hyperon_das_atomdb import AtomDoesNotExist
 
@@ -6,6 +8,19 @@ from hyperon_das.cache.iterators import TraverseLinksIterator, TraverseNeighbors
 
 if TYPE_CHECKING:  # pragma no cover
     from hyperon_das.das import DistributedAtomSpace
+
+
+class MetaCustomFilter(metaclass=abc.ABCMeta):
+    @classmethod
+    def __subclasshook__(cls, subclass):
+        return hasattr(subclass, 'filter') and callable(subclass.filter) or NotImplemented
+
+    @abc.abstractmethod
+    def filter(self, atom: Dict[str, Any], apply: Optional[str] = '') -> bool:
+        """
+        Returns True if the atom should be kept, False otherwise.
+        """
+        ...  # pragma no cover
 
 
 class TraverseEngine:
@@ -35,8 +50,7 @@ class TraverseEngine:
         1. **link_type=XXX**: Filters to only contain links whose named_type == XXX.
         2. **cursor_position=N**: Filters the response so that only links with the current cursor at the position `n` of their target are returned.
         3. **target_type=XXX**: Filters to only contain links whose at least one of the targets has named_type == XXX.
-        4. **filter=F**: F is a function used to filter results after every other filters have been applied.
-            F should expect a dict (the atom document) and return True if and only if this atom should be kept.
+        4. **filters=F**: F is a class or a list of classes that must implement a filter() method used to filter the results after applying all other filters. filter() should expect a dict (the atom document) and return True if and only if this atom should be kept.
 
         Returns:
             Iterator: An iterator that contains the links that match the criteria.
@@ -50,7 +64,7 @@ class TraverseEngine:
                     link_type='Ex',
                     cursor_position=2,
                     target_type='Sy',
-                    filter=has_score
+                    filters=has_score
                 )
             >>> next(links)
         """
@@ -71,8 +85,8 @@ class TraverseEngine:
         1. **link_type=XXX**: Filters to only contain links whose named_type == XXX.
         2. **cursor_position=N**: Filters the response so that only links with the current cursor at the position `n` of their target are returned.
         3. **target_type=XXX**: Filters to only contain links whose at least one of the targets has named_type == XXX.
-        4. **filter=F**: F is a function used to filter results after every other filters have been applied.
-            F should expect a dict (the atom document) and return True if and only if this atom should be kept.
+        4. **filters=F**: F is a class or a list of classes that must implement a filter() method used to filter the results after applying all other filters. filter() should expect a dict (the atom document) and return True if and only if this atom should be kept.
+            If the filter class has a parameter `apply` with value 'targets', the filter will be applied only the targets of the link.
 
         Returns:
             Iterator: An iterator that contains the neighbors that match the criteria.
@@ -85,8 +99,34 @@ class TraverseEngine:
                 )
             >>> next(neighbors)
         """
+        custom_filters = kwargs.get('filters', [])
+
+        if not isinstance(custom_filters, list):
+            custom_filters = [custom_filters]
+
+        if custom_filters:
+            _filters = []
+            for custom_filter in custom_filters:
+                try:
+                    assert issubclass(
+                        custom_filter, MetaCustomFilter
+                    ), f"The '{custom_filter.__name__}' class must implement the 'filter(self, atom: dict) -> bool: ...' method"
+                except TypeError:
+                    raise Exception(
+                        f"The '{custom_filter.__name__}' must be a class that implement the 'filter(self, atom: dict) -> bool: ...' method"
+                    )
+
+                if not (
+                    inspect.signature(custom_filter().filter).parameters.get('apply')
+                    and inspect.signature(custom_filter().filter).parameters.get('apply').default
+                    == 'targets'
+                ):
+                    _filters.append(custom_filter)
+
+            kwargs['filters'] = _filters
+
         filtered_links = self.get_links(targets_only=True, **kwargs)
-        return TraverseNeighborsIterator(source=filtered_links)
+        return TraverseNeighborsIterator(source=filtered_links, filters=custom_filters)
 
     def follow_link(self, **kwargs) -> Dict[str, Any]:
         """Update the current cursor by following the first of the neighbors that points to the current cursor.
@@ -96,8 +136,7 @@ class TraverseEngine:
         1. **link_type=XXX**: Filters to only contain links whose named_type == XXX.
         2. **cursor_position=N**: Filters the response so that only links with the current cursor at the position `n` of their target are returned.
         3. **target_type=XXX**: Filters to only contain links whose at least one of the targets has named_type == XXX.
-        4. **filter=F**: F is a function used to filter results after every other filters have been applied.
-            F should expect a dict (the atom document) and return True if and only if this atom should be kept.
+        4. **filters=F**: F is a class or a list of classes that must implement a filter() method used to filter the results after applying all other filters. filter() should expect a dict (the atom document) and return True if and only if this atom should be kept.
 
         Returns:
             Dict[str, Any]: The current cursor. A Python dict with all atom data.
