@@ -214,10 +214,11 @@ class TestTraverseLinks:
     def human_handle(self):
         return metta_animal_base_handles.human
 
-    def _is_expression_atom(self, atom: dict) -> bool:
-        if atom['named_type'] != 'Expression':
-            return False
-        return True
+    class IsExpressionAtom:
+        def filter(self, atom: dict) -> bool:
+            if atom['named_type'] != 'Expression':
+                return False
+            return True
 
     def _human_incoming_links(self):
         return sorted(
@@ -251,7 +252,7 @@ class TestTraverseLinks:
         das = DistributedAtomSpace()
         load_metta_animals_base(das)
         traverse = das.get_traversal_cursor(human_handle)
-        iterator = traverse.get_links(filter=self._is_expression_atom)
+        iterator = traverse.get_links(filters=self.IsExpressionAtom)
         self._check_asserts(das, iterator)
 
     def test_traverse_links_with_das_redis_mongo(self, human_handle, _cleanup):
@@ -269,7 +270,7 @@ class TestTraverseLinks:
         load_metta_animals_base(das)
         das.commit_changes()
         traverse = das.get_traversal_cursor(human_handle)
-        iterator = traverse.get_links(filter=self._is_expression_atom)
+        iterator = traverse.get_links(filters=self.IsExpressionAtom)
         self._check_asserts(das, iterator)
         _db_down()
 
@@ -278,7 +279,7 @@ class TestTraverseLinks:
             query_engine='remote', host=remote_das_host, port=remote_das_port
         )
         traverse = das.get_traversal_cursor(human_handle)
-        iterator = traverse.get_links(filter=self._is_expression_atom)
+        iterator = traverse.get_links(filters=self.IsExpressionAtom)
         self._check_asserts(das, iterator)
 
 
@@ -301,10 +302,11 @@ class TestTraverseNeighbors:
             ]
         )
 
-    def _is_literal_atom(self, atom: dict) -> bool:
-        if atom['is_literal'] is False:
-            return False
-        return True
+    class IsLiteralAtom:
+        def filter(self, atom: dict, apply='targets') -> bool:
+            if atom['is_literal'] is False:
+                return False
+            return True
 
     def _check_asserts(self, das: DistributedAtomSpace, iterator: TraverseNeighborsIterator):
         current_value = iterator.get()
@@ -324,7 +326,7 @@ class TestTraverseNeighbors:
         das = DistributedAtomSpace()
         load_metta_animals_base(das)
         traverse = das.get_traversal_cursor(human_handle)
-        iterator = traverse.get_neighbors(filter=self._is_literal_atom)
+        iterator = traverse.get_neighbors(filters=self.IsLiteralAtom)
         self._check_asserts(das, iterator)
 
     def test_traverse_neighbors_with_das_redis_mongo(self, human_handle, _cleanup):
@@ -342,7 +344,7 @@ class TestTraverseNeighbors:
         load_metta_animals_base(das)
         das.commit_changes()
         traverse = das.get_traversal_cursor(human_handle)
-        iterator = traverse.get_neighbors(filter=self._is_literal_atom)
+        iterator = traverse.get_neighbors(filters=self.IsLiteralAtom)
         self._check_asserts(das, iterator)
         _db_down()
 
@@ -351,7 +353,7 @@ class TestTraverseNeighbors:
             query_engine='remote', host=remote_das_host, port=remote_das_port
         )
         traverse = das.get_traversal_cursor(human_handle)
-        iterator = traverse.get_neighbors(filter=self._is_literal_atom)
+        iterator = traverse.get_neighbors(filters=self.IsLiteralAtom)
         self._check_asserts(das, iterator)
 
 
