@@ -332,27 +332,20 @@ class TestTraverseEngine:
                 }
             )
 
-            def my_filter(link) -> bool:
-                if 'weight' in link:
-                    return True
-                return False
+            class MyFilter:
+                def filter(self, link) -> bool:
+                    if 'weight' in link:
+                        return True
+                    return False
 
             answers = _build_atom_answer(
                 animal_base_handles.human,
                 link_type='Similarity',
                 cursor_position=0,
                 target_type='Concept',
-                filter=my_filter,
+                filters=MyFilter,
             )
             assert answers == {"Similarity : ['human', 'snet']"}
-
-            def my_second_filter(link):
-                if 'weight' in link and link['weight'] >= 0.5:
-                    return link
-
-            with pytest.raises(TypeError) as exc:
-                _build_atom_answer(animal_base_handles.human, filter=my_second_filter)
-            assert exc.value.args[0] == 'Filter must return bool'
 
         def _mammal_links():
             answers = _build_atom_answer(animal_base_handles.mammal, link_type='Inheritance')
@@ -416,17 +409,18 @@ class TestTraverseEngine:
                 }
             )
 
-            def my_filter(link) -> bool:
-                if 'weight' in link and link['weight'] >= 0.5:
-                    return True
-                return False
+            class MyFilter:
+                def filter(self, link) -> bool:
+                    if 'weight' in link and link['weight'] >= 0.5:
+                        return True
+                    return False
 
             answers = _build_atom_answer(
                 animal_base_handles.mammal,
                 link_type='Inheritance',
                 cursor_position=1,
                 target_type='Fake',
-                filter=my_filter,
+                filters=MyFilter,
             )
             assert answers == {"Inheritance : ['fake2', 'mammal']"}
 
@@ -502,16 +496,17 @@ class TestTraverseEngine:
                 }
             )
 
-            def my_filter(link) -> bool:
-                if 'weight' in link and link['weight'] >= 0.5:
-                    return True
-                return False
+            class MyFilter:
+                def filter(self, link) -> bool:
+                    if 'weight' in link and link['weight'] >= 0.5:
+                        return True
+                    return False
 
             answers = _build_atom_answer(
                 animal_base_handles.snake,
                 link_type='Similarity',
                 target_type='Fake',
-                filter=my_filter,
+                filters=MyFilter,
             )
             assert answers == {"Similarity : ['snake', 'fake1']"}
 
@@ -821,10 +816,11 @@ class TestTraverseEngine:
                 }
             )
 
-            def my_filter(target) -> bool:
-                if 'weight' in target and target['weight'] >= 1:
-                    return True
-                return False
+            class MyFilter:
+                def filter(self, target, apply='targets') -> bool:
+                    if 'weight' in target and target['weight'] >= 1:
+                        return True
+                    return False
 
             fake_h = AtomDB.node_handle('Fake', 'fake-h')
             fake_h2 = AtomDB.node_handle('Fake', 'fake-h2')
@@ -852,7 +848,7 @@ class TestTraverseEngine:
                 animal_base_handles.human,
                 link_type='Inheritance',
                 target_type='Fake',
-                filter=my_filter,
+                filters=MyFilter,
             )
             assert len(neighbors) == 1
 
@@ -936,18 +932,19 @@ class TestTraverseEngine:
             assert das.get_atom(fake_v2) in neighbors
             assert len(neighbors) == 1
 
-            def my_filter(target) -> bool:
-                if 'weight' in target and target['weight'] >= 1:
-                    return True
-                return False
+            class MyFilter:
+                def filter(self, target, apply='targets') -> bool:
+                    if 'weight' in target and target['weight'] >= 1:
+                        return True
+                    return False
 
             neighbors = _build_neighbors(
-                animal_base_handles.vine, link_type='Similarity', filter=my_filter
+                animal_base_handles.vine, link_type='Similarity', filters=MyFilter
             )
             assert len(neighbors) == 0
 
             neighbors = _build_neighbors(
-                animal_base_handles.vine, link_type='Inheritance', filter=my_filter
+                animal_base_handles.vine, link_type='Inheritance', filters=MyFilter
             )
             assert das.get_atom(fake_v1) in neighbors
             assert len(neighbors) == 1
